<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/wallpapers2"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"

                tools:context="com.hitachi_tstv.yodpanom.yaowaluk.tiresmanagement.MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="12dp"
        tools:background="@color/color_gray_bg">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/tiretext"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/icon_weight"
            android:layout_height="@dimen/icon_height"
            android:layout_margin="15dp"
            android:padding="12dp"
            android:src="@drawable/pandgroup2"/>

        <EditText
            android:id="@+id/editText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#78ffffff"
            android:hint="Username"
            android:textColor="@color/text"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#78ffffff"
            android:hint="Password"
            android:inputType="textWebPassword"
            android:textColor="@color/text"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/imgLogo"
            android:layout_below="@+id/imgLogo"
            android:layout_margin="10dp"
            android:background="#78ffffff"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textSize="24sp"/>

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/edit_username"
            android:layout_below="@+id/edit_username"
            android:layout_margin="10dp"
            android:background="#78ffffff"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:onClick="clickSignIn"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"/>

    </LinearLayout>
</RelativeLayout>
